--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 00:05:22 2018</p>
+         Last Run: Sat Oct 27 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -34,21 +34,21 @@
                         <td>10</td>
                         <td>10</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>1</td>
-                        <td>21</td>
+                        <td>23</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>05:00 PM</td>
                         <td>Clear</td>
-                        <td>9</td>
-                        <td>9</td>
+                        <td>10</td>
+                        <td>10</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -60,21 +60,21 @@
                         <td>0</td>
                         <td>32</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>2</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>6</td>
-                        <td>4</td>
+                        <td>7</td>
+                        <td>5</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -84,9 +84,9 @@
                         <td>0</td>
                         <td>41</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,9 +133,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "10",
-                 "9",
+                 "10",
                  "6",
-                 "4",
+                 "5",
                  "3"
                ]
              },
@@ -146,9 +146,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "10",
-                 "9",
+                 "10",
                  "8",
-                 "6",
+                 "7",
                  "5"
                ]
              }
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
-                 "30",
+                 "27",
+                 "29",
                  "32",
-                 "36",
+                 "35",
                  "41"
                ]
              },
@@ -229,8 +229,8 @@
                  "0",
                  "0",
                  "2",
-                 "6",
-                 "9"
+                 "20",
+                 "28"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 00:05:22 2018</p>
+         Last Run: Sat Oct 27 01:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -268,23 +268,23 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>4</td>
-                        <td>60</td>
+                        <td>3</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -296,7 +296,7 @@
                         <td>5</td>
                         <td>2</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -409,7 +409,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "4",
+                 "3",
                  "2"
                ]
              },
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "60",
-                 "56"
+                 "65",
+                 "62",
+                 "57"
                ]
              },
              {
@@ -428,7 +428,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "78",
                  "70"
                ]
