--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 01:05:07 2018</p>
+         Last Run: Sat Oct 27 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -31,12 +31,12 @@
                      <tr>
                         <td>04:00 PM</td>
                         <td>Clear</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>11</td>
+                        <td>11</td>
                         <td>0</td>
                         <td>27</td>
                         <td>1</td>
-                        <td>23</td>
+                        <td>21</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -46,47 +46,47 @@
                         <td>10</td>
                         <td>10</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
                         <td>32</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>2</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>7</td>
-                        <td>5</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>0</td>
-                        <td>41</td>
+                        <td>1</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,10 +132,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "11",
                  "10",
-                 "10",
-                 "6",
-                 "5",
+                 "9",
+                 "4",
                  "3"
                ]
              },
@@ -145,10 +145,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "11",
                  "10",
-                 "10",
-                 "8",
-                 "7",
+                 "9",
+                 "6",
                  "5"
                ]
              }
@@ -206,7 +206,7 @@
                  "0",
                  "0",
                  "0",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "27",
-                 "29",
+                 "28",
                  "32",
-                 "35",
-                 "41"
+                 "36",
+                 "42"
                ]
              },
              {
@@ -229,8 +229,8 @@
                  "0",
                  "0",
                  "2",
-                 "20",
-                 "28"
+                 "18",
+                 "24"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 01:05:08 2018</p>
+         Last Run: Sat Oct 27 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -268,39 +268,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>4</td>
-                        <td>65</td>
+                        <td>2</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>79</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>3</td>
-                        <td>62</td>
+                        <td>9</td>
+                        <td>63</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>78</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>57</td>
+                        <td>4</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
+                        <td>61</td>
+                        <td>1</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -346,7 +346,7 @@
                "data":[
                  "-2",
                  "0",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -357,7 +357,7 @@
                "data":[
                  "1",
                  "3",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -408,9 +408,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "3",
-                 "2"
+                 "2",
+                 "9",
+                 "14"
                ]
              },
              {
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "62",
-                 "57"
+                 "67",
+                 "63",
+                 "61"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "78",
-                 "70"
+                 "86",
+                 "83",
+                 "69"
                ]
              }
            ]
