--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 03:05:22 2018</p>
+         Last Run: Sat Oct 27 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -34,9 +34,9 @@
                         <td>10</td>
                         <td>10</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>1</td>
-                        <td>23</td>
+                        <td>21</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -46,10 +46,10 @@
                         <td>10</td>
                         <td>10</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>19</td>
-                        <td>W</td>
+                        <td>18</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -58,11 +58,11 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>2</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -72,9 +72,9 @@
                         <td>0</td>
                         <td>37</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>4</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>24</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "26",
                  "27",
-                 "28",
-                 "32",
+                 "31",
                  "37",
-                 "43"
+                 "42"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "0",
                  "0",
-                 "2",
-                 "19",
-                 "24"
+                 "0",
+                 "16",
+                 "25"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 03:05:22 2018</p>
+         Last Run: Sat Oct 27 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -269,34 +269,34 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
                         <td>2</td>
+                        <td>-1</td>
+                        <td>3</td>
                         <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>86</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>0</td>
-                        <td>9</td>
-                        <td>62</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>83</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
+                        <td>6</td>
                         <td>4</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>61</td>
+                        <td>2</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -344,9 +344,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
-                 "0",
-                 "1"
+                 "-1",
+                 "1",
+                 "4"
                ]
              },
              {
@@ -355,9 +355,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
-                 "3",
-                 "4"
+                 "2",
+                 "4",
+                 "6"
                ]
              }
            ]
@@ -408,9 +408,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "3",
                  "2",
-                 "9",
-                 "14"
+                 "2"
                ]
              },
              {
@@ -419,8 +419,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "66",
-                 "62",
-                 "61"
+                 "63",
+                 "60"
                ]
              },
              {
@@ -428,8 +428,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "83",
+                 "87",
+                 "80",
                  "69"
                ]
              }
