--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 06:05:17 2018</p>
+         Last Run: Sat Oct 27 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -49,7 +49,7 @@
                         <td>27</td>
                         <td>0</td>
                         <td>19</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>4</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -218,7 +218,7 @@
                  "27",
                  "32",
                  "37",
-                 "42"
+                 "41"
                ]
              },
              {
@@ -229,8 +229,8 @@
                  "0",
                  "0",
                  "0",
-                 "16",
-                 "25"
+                 "3",
+                 "14"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 06:05:17 2018</p>
+         Last Run: Sat Oct 27 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -272,35 +272,35 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>86</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
                         <td>3</td>
-                        <td>62</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>6</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>2</td>
                         <td>60</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>SSE</td>
-                        <td>74</td>
+                        <td>13</td>
+                        <td>S</td>
+                        <td>73</td>
                      </tr>
                   </tbody>
                </table>
@@ -346,7 +346,7 @@
                "data":[
                  "-1",
                  "1",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -418,8 +418,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "62",
+                 "68",
+                 "64",
                  "60"
                ]
              },
@@ -429,8 +429,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "86",
-                 "80",
-                 "74"
+                 "79",
+                 "73"
                ]
              }
            ]
