--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 18:05:03 2018</p>
+         Last Run: Sat Oct 27 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -28,18 +28,6 @@
                      </tr>
                   </thead>
                   <tbody>
-                     <tr>
-                        <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>6</td>
-                        <td>3</td>
-                        <td>0</td>
-                        <td>33</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>WNW</td>
-                        <td>5</td>
-                     </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM"
            ],
            "datasets":[
@@ -93,7 +80,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "3",
                  "1"
                ]
              },
@@ -103,7 +89,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "6",
                  "4"
                ]
              }
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM"
            ],
            "datasets":[
@@ -154,7 +138,6 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -163,7 +146,6 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
                  "39"
                ]
              },
@@ -172,7 +154,6 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
                  "5"
                ]
              }
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 18:05:03 2018</p>
+         Last Run: Sat Oct 27 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -216,7 +197,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -240,7 +221,7 @@
                         <td>6</td>
                         <td>3</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
@@ -362,9 +343,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
+                 "67",
                  "59",
-                 "57"
+                 "56"
                ]
              },
              {
@@ -391,7 +372,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 18:05:03 2018</p>
+         Last Run: Sat Oct 27 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -412,39 +393,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>14</td>
-                        <td>77</td>
+                        <td>-1</td>
+                        <td>5</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>81</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>67</td>
-                        <td>0</td>
+                        <td>4</td>
+                        <td>68</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>80</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>12</td>
-                        <td>59</td>
+                        <td>8</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>79</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -488,7 +469,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
                  "2"
                ]
@@ -552,9 +533,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "14",
-                 "13",
-                 "12"
+                 "5",
+                 "4",
+                 "8"
                ]
              },
              {
@@ -562,9 +543,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "67",
-                 "59"
+                 "78",
+                 "68",
+                 "60"
                ]
              },
              {
@@ -572,9 +553,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
-                 "80",
-                 "79"
+                 "77",
+                 "74",
+                 "71"
                ]
              }
            ]
